--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A Tiny Valentine</title>
+  <title>K</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -15,6 +15,10 @@
 
     <!-- SLIDE 1 -->
     <section class="slide">
+
+        <img src="images\cato.gif" class="decor top-left">
+        <img src="images\pengu.gif" class="decor bottom-right">
+
       <h1>Hey you 🌸</h1>
       <p>I made this just for you.</p>
       <button onclick="goToSlide(1)">Next 💫</button>
