--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <img src="images\cato.gif" class="decor top-left">
         <img src="images\pengu.gif" class="decor bottom-right">
 
-      <h1>Hey you 🌸</h1>
-      <p>I made this just for you.</p>
+      <h1>Hellou buenas noches tardes dias 🌸</h1>
+      <p>It's better to do something than just say it</p>
       <button onclick="goToSlide(1)">Next 💫</button>
     </section>
 
