--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
 
   <div class="slides">
+    <!-- SLIDE 0 -->
+    <section class="slide intro">
+      <h1>We start :3</h1>
+      <p>But tell me</p>
+      <button onclick="startExperience()">Are you free? ✨</button>
+    </section>
 
     <!-- SLIDE 1 -->
     <section class="slide">
