--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="slides">
     <!-- SLIDE 0 -->
-    <section class="slide intro">
+    <section class="slide">
       <h1>We start :3</h1>
       <p>But tell me</p>
       <button onclick="startExperience()">Are you free? ✨</button>
