--- a/index.html
+++ b/index.html
@@ -81,17 +81,20 @@
   </audio>
 
   <script>
+    const slides = document.querySelector(".slides");
     const music = document.getElementById("bg-music");
 
-    function goToSlide(index) {
-      if (music.paused) {
-        music.volume = 0.4;
-        music.play();
-      }
+    function startExperience() {
+      music.volume = 0.35;
+      music.play();
+      goToSlide(1);
+    }
 
-      const slides = document.querySelector(".slides");
+    function goToSlide(index) {
       slides.style.transform = `translateX(-${index * 100}vw)`;
     }
+</script>
+
 </script>
 </body>
 </html>
