--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
   <div class="slides">
     <!-- SLIDE 0 -->
+     <img src="images\happycat.jpg" class="decor top-left">
+
     <section class="slide intro">
       <h1>We start :3</h1>
+      <small>(Sube el volumen, tranqui no voy a gritar :v. O si?)</small>
       <p>But tell me</p>
       <button onclick="startExperience()">Are you free? ✨</button>
     </section>
@@ -25,13 +28,17 @@
         <img src="images\cato.gif" class="decor top-left">
         <!-- <img src="images\pengu.gif" class="decor bottom-right"> -->
 
-      <h1>Hellou buenas noches tardes dias 🌸</h1>
-      <p>It's better to do something than just say it</p>
+      <h1>Hellou buenas noches tardes dias 🐈</h1>
+      <p>It's better to do something than just say it.</p>
+      <p>Las horas perdidas de sueño, valdran la pena</p>
+      <p>Si alguna sonrisa sale de todo esto</p>
       <button onclick="goToSlide(2)">Next 💫</button>
     </section>
 
     <!-- SLIDE 2 -->
     <section class="slide">
+      <img src="images\amazedcat.gif" class="decor top-left">
+
       <h1>Just because it's you</h1>
       <p>
         This took more effort than choosing an ice cream flavor.
