--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="slides">
     <!-- SLIDE 0 -->
-     <img src="images\happycat.jpg" class="decor top-left">
+     <img src="images\happycat.jpg" class="cute-img">
 
     <section class="slide intro">
       <h1>We start :3</h1>
