--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   <div class="slides">
     <!-- SLIDE 0 -->
-     <img src="images\happycat.jpg" class="cute-img">
-
+     
     <section class="slide intro">
+
+      <img src="images\happycat.jpg" class="decor top-left">
       <h1>We start :3</h1>
       <small>(Sube el volumen, tranqui no voy a gritar :v. O si?)</small>
       <p>But tell me</p>
