--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
     <section class="slide intro">
 
-      <img src="images\happycat.jpg" class="decor top-left">
+      <img src="images\happycat.jpg" class="decor top-left" width="160">
       <h1>We start :3</h1>
       <small>(Sube el volumen, tranqui no voy a gritar :v. O si?)</small>
       <p>But tell me</p>
