--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         <!-- <img src="images\pengu.gif" class="decor bottom-right"> -->
 
       <h1>Hellou buenas noches tardes dias 🐈</h1>
-      <p>It's better to do something than just say it.</p>
-      <p>Las horas perdidas de sueño, valdran la pena</p>
-      <p>Si alguna sonrisa sale de todo esto</p>
+      <p>It's better to do things, than just say empty words.</p>
+      <p>
+        Entre todos los instantes posibles del universo y sus realidades, aca estamos.
+        Tal vez fueron los astros, las matematicas, o solo fue el destino, o tal vez no exista nada tan altruista y solo es la vida en si.
+        Pero aun asi, nos toco coincidir en este tiempo y espacio.
+      </p>
       <button onclick="goToSlide(2)">Next 💫</button>
     </section>
 
@@ -42,8 +45,11 @@
 
       <h1>Just because it's you</h1>
       <p>
-        This took more effort than choosing an ice cream flavor.
-        And that’s saying something.
+        Because it's your smile,<br>
+        Because it's your eyes,<br>
+        Because it's your voice,<br>
+        Because son tus dedos sin uñas,<br>
+        Just because it's you.
       </p>
       <button onclick="goToSlide(3)">Next 🍦</button>
     </section>
@@ -52,19 +58,29 @@
     <section class="slide">
 
       <img src="images\pengu.gif" class="decor top-right">
-      <h1>So… 💌</h1>
+      <h1>Asi que....</h1>
       <p>
-        This Valentine’s Day (Feb 14)<br>
-        would you like to go get ice cream with me?
+        Salimos mañana?<br>
+        Caminar, comer algo, tomar algo, hablar, cantar, bailar xdd<br>
+        Incluso solo quedarnos mirando a la nada en la distancia
+        <small>psdt. no elijas las plantas :v</small>
       </p>
 
       <div class="buttons">
-        <button id="yesBtn" type="button" onclick="sayYes()">Yes, let’s go 🍦</button>
-        <button id="noBtn" type="button" onclick="sayNo()">No 😌</button>
+        <button id="yesBtn" type="button" onclick="sayYes()">I'm free 😊</button>
+        <button id="noBtn" type="button" onclick="sayNo()">I'm plant-sitting 😔</button>
       </div>
 
       <div id="response"></div>
     </section>
+
+    <!-- SLIDE 4 -->
+    <section class="slide">
+      <img src="images/happycat.jpg" class="decor top-left">
+      <h1>Yaaaay</h1>
+        <p>Ahora escribeme por wssp, porque no se como mandarme notificaciones desde aqui :c</p>
+    </section>
+
 
   </div>
 
